fix: font style not showing in production

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Aldrich&family=Sora:wght@100..800&display=swap");
 @import "tailwindcss";
 
 :root {
@@ -15,7 +14,8 @@
   --text_light: #222222;
   --text_dark: #f5f5f5;
 
-  --font-global: "Aldrich", sans-serif;
+  /* Font variable comes from next/font */
+  --font-global: var(--font-aldrich);
 }
 
 @theme inline {
@@ -40,5 +40,5 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: var(--font-global);
+  font-family: var(--font-global), sans-serif;
 }
